RESOLVED FIXED282627
[Navigation] Entry state can be lost during traversals
https://bugs.webkit.org/show_bug.cgi?id=282627
Summary [Navigation] Entry state can be lost during traversals
Patrick Griffis
Reported 2024-11-05 11:09:14 PST
state/same-document-away-and-back-location-api.html updateCurrentEntry-method/same-document-away-and-back-location-api.html The cause is unclear at a glance. Currently HistoryItem and NavigationHistoryEntry both maintain their own state, so at some point they are probably out of sync and state is lost.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-12 11:10:12 PST
Chris Dumez
Comment 2 2024-12-04 16:19:18 PST
EWS
Comment 3 2024-12-05 09:01:24 PST
Committed 287401@main (79c78cf13ab4): <https://commits.webkit.org/287401@main> Reviewed commits have been landed. Closing PR #37460 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.