[Navigation] Entry state can be lost during traversals https://bugs.webkit.org/show_bug.cgi?id=282627 rdar://139735948

Reviewed by Rob Buis.

As per [1], fragment navigations should maintain the previous NavigationEntry's
state object. This PR implements this behavior to make the corresponding WPT
tests pass.

[1] https://html.spec.whatwg.org/#scroll-to-fragid

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/state/same-document-away-and-back-location-api-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/updateCurrentEntry-method/same-document-away-and-back-location-api-expected.txt:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadInSameDocument):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::updateForNavigation):
* Source/WebCore/page/Navigation.h:
* Source/WebCore/page/NavigationHistoryEntry.h:

Canonical link: https://commits.webkit.org/287401@main